--- a/mods/musicplayer/plugins/mp3plugin/CMakeLists.txt
+++ b/mods/musicplayer/plugins/mp3plugin/CMakeLists.txt
@@ -4,12 +4,11 @@ project(cpp-mods.musicplayer.mp3plugin)
 
 set(SOURCE_FILES MP3Plugin.cpp)
 
-find_library(MPG123_LIBRARY mpg123 mpg123 REQUIRED)
+find_library(MPG123_LIBRARY libmpg123.lib REQUIRED)
 find_path(MPG123_PATH mpg123.h)
-
 include_directories(${MPG123_PATH})
+#find_package(mpg123 REQUIRED)
 
-message("MP3 " ${MPG123_LIBRARY})
 
 if(NOT TARGET crypto)
 	add_subdirectory(../../../crypto crypto)
