--- a/mods/fft/CMakeLists.txt
+++ b/mods/fft/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(cpp-mods.fft)
 
-find_library(FFT_LIBRARY fftw3f.lib)
+find_library(FFT_LIBRARY fftw3f)
 find_path(FFT_PATH fftw3.h)
 #message("FFT " ${FFT_LIBRARY} "/" ${FFT_PATH})
 #find_package()
