--- a/mods/musicplayer/plugins/mp3plugin/CMakeLists.txt
+++ b/mods/musicplayer/plugins/mp3plugin/CMakeLists.txt
@@ -4,15 +4,15 @@ project(cpp-mods.musicplayer.mp3plugin)
 
 set(SOURCE_FILES MP3Plugin.cpp)
 
-find_library(MPG123_LIBRARY libmpg123.lib REQUIRED)
+find_library(MPG123_LIBRARY mpg123 REQUIRED)
 find_path(MPG123_PATH mpg123.h)
-include_directories(${MPG123_PATH})
-#find_package(mpg123 REQUIRED)
-
 
 if(NOT TARGET crypto)
 	add_subdirectory(../../../crypto crypto)
 endif()
 
 add_library(mp3plugin ${SOURCE_FILES})
-target_link_libraries(mp3plugin ${MPG123_LIBRARY})
+
+# TODO we use libmp3 in the main app too, so public. Bad.
+target_include_directories(mp3plugin PUBLIC ${MPG123_PATH})
+target_link_libraries(mp3plugin PUBLIC ${MPG123_LIBRARY})
