--- a/mods/musicplayer/plugins/ffmpegplugin/CMakeLists.txt
+++ b/mods/musicplayer/plugins/ffmpegplugin/CMakeLists.txt
@@ -1,27 +1,22 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(cpp-mods.musicplayer.ffmpegplugin)
-
+#include(FindPkgConfig)
 set(SOURCE_FILES FFMPEGPlugin.cpp)
 
+#pkg_search_module(AVFORMAT REQUIRED libavformat)
+#pkg_search_module(SWSCALE REQUIRED libswscale)
+#pkg_search_module(AVCODEC REQUIRED libavcodec)
+#pkg_search_module(AVFILTER REQUIRED libavfilter)
+#pkg_search_module(SWRESAMPLE REQUIRED libswresample)
+#pkg_search_module(AVUTIL REQUIRED libavutil)
 
-find_path(AVFORMAT_PATH libavformat/avformat.h)
+#set(FFMPEG_LIBRARIES ${AVFORMAT_LIBRARIES} ${SWSCALE_LIBRARIES} ${AVCODEC_LIBRARIES} ${AVFILTER_LIBRARIES} ${AVUTIL_LIBRARIES} ${SWRESAMPLE_LIBRARIES})
+#set(FFMPEG_LIBRARY_DIRS ${AVFORMAT_LIBRARY_DIRS} ${SWSCALE_LIBRARY_DIRS})
+#set(FFMPEG_INCLUDE_DIRS ${AVFORMAT_INCLUDE_DIRS} ${SWSCALE_INCLUDE_DIRS})
 
-if(APPLE)
- link_directories(/usr/local/lib)
- find_library(ICONV_LIBRARY iconv REQUIRED)
- find_library(VDA_PATH VideoDecodeAcceleration REQUIRED)
- find_library(COREMED_PATH CoreMedia REQUIRED)
- find_library(COREVID_PATH CoreVideo REQUIRED)
- find_library(COREFND_PATH CoreFoundation REQUIRED)
- find_library(VTB_PATH VideoToolbox REQUIRED)
- set(FRAMEWORKS ${VTB_PATH} ${VDA_PATH} ${COREVID_PATH} ${COREMED_PATH} ${COREFND_PATH})
- set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} -L/usr/local/lib)
-endif()
-
-set(FFMPEG avcodec avutil avformat swresample)
-
-include_directories(${AVFORMAT_PATH})
+#link_directories(${FFMPEG_LIBRARY_DIRS})
 
 add_library(ffmpegplugin ${SOURCE_FILES})
-target_link_libraries(ffmpegplugin ${FRAMEWORKS} ${FFMPEG})
+#target_include_directories(ffmpegplugin PRIVATE ${FFMPEG_INCLUDE_DIRS})
+#target_link_libraries(ffmpegplugin PRIVATE ${FFMPEG_LIBRARIES})
 
