--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ else()
 	set(FSLIB stdc++fs)
 endif()
 
-add_executable(testing mods/coreutils/newfile.t.cpp)
+add_executable(testing mods/coreutils/newfile.t.cpp mods/luainterpreter/luainterpreter.t.cpp mods/luainterpreter/luainterpreter.cpp)
 target_link_libraries(testing ${FSLIB} pthread)
 target_include_directories(testing PRIVATE mods)
 target_compile_definitions(testing PRIVATE -DTESTING)
