Cleaned up bbsutils. Removed some old stuff

--- a/mods/bbsutils/CMakeLists.txt
+++ b/mods/bbsutils/CMakeLists.txt
@@ -2,7 +2,10 @@ cmake_minimum_required(VERSION 2.8.4)
 project(cpp-mods.bbsutils)
 
 add_subdirectory(../netlink netlink)
-include_directories(../netlink)
+#add_subdirectory(../coreutils coreutils)
+include_directories(../netlink ..)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17")
 
 set(SOURCE_FILES
 	ansiconsole.cpp
@@ -17,4 +20,7 @@ if(NOT WIN32)
 endif()
 
 add_library(bbsutils ${SOURCE_FILES})
-target_link_libraries(bbsutils netlink)
+target_link_libraries(bbsutils netlink coreutils)
+
+#add_executable(bbstest test.cpp)
+#target_link_libraries(bbstest bbsutils coreutils)
