Added own path class

--- a/mods/coreutils/CMakeLists.txt
+++ b/mods/coreutils/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 2.8.4)
 project(cpp-mods.coreutils)
 
-
 add_subdirectory(fmt)
 
 set(SOURCE_FILES file.cpp format.cpp log.cpp utils.cpp)
@@ -21,13 +20,8 @@ add_library(coreutils ${SOURCE_FILES})
 target_link_libraries(coreutils PRIVATE fmt)
 set_property(TARGET coreutils PROPERTY POSITION_INDEPENDENT_CODE ON)
 
-if(DO_UNIT_TEST)
-
-	add_definitions(-DUNIT_TEST)
-	include_directories(../../test)
-	add_executable(coreutils_test ../../test/catch.cpp)
-	set_target_properties(coreutils_test PROPERTIES LINK_FLAGS "-all_load")
-	target_link_libraries(coreutils_test coreutils)
-	add_test(coreutils coreutils_test)
-
-endif()
+add_executable(testing path.t.cpp)
+set_property(TARGET testing PROPERTY CXX_STANDARD 17)
+set_property(TARGET testing PROPERTY CXX_STANDARD_REQUIRED ON)
+target_link_libraries(testing coreutils pthread)
+target_include_directories(testing PRIVATE ../mods ..)
