--- a/mods/archive/CMakeLists.txt
+++ b/mods/archive/CMakeLists.txt
@@ -9,7 +9,6 @@ endif()
 
 set(SOURCE_FILES archive.cpp)
 
-add_definitions(-DSILENT -DRARDLL)
-
 add_library(archive ${SOURCE_FILES})
-target_link_libraries(archive unrar miniz)
+target_link_libraries(archive PRIVATE coreutils unrar miniz)
+target_compile_definitions(archive PRIVATE -DSILENT -DRARDLL)
