--- a/mods/fft/CMakeLists.txt
+++ b/mods/fft/CMakeLists.txt
@@ -9,4 +9,4 @@ set(SOURCE_FILES spectrum.cpp)
 add_library(fft ${SOURCE_FILES})
 target_compile_definitions(fft PRIVATE -DFFTW_SINGLE)
 target_include_directories(fft PRIVATE ${FFT_PATH})
-target_link_libraries(fft PRIVATE ${FFT_LIBRARY})
+target_link_libraries(fft PRIVATE coreutils ${FFT_LIBRARY})
